--- a/static/css/style.css
+++ b/static/css/style.css
@@ -236,28 +236,8 @@ main .table-list.table-internal-list th {
   border-bottom: solid 1px #e5e5e5; }
 
 main .table-list.table-internal-list td {
-
-  /* font-size: 0.7rem; */
-
-
   padding: 10px 15px;
-  border-bottom: solid 1px #e5e5e5;
-  /* background: #fefefe !important; */
-  /* background: -moz-linear-gradient(top, #fefefe 1%, #f2f7f9 100%);
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#fefefe), color-stop(100%,#f2f7f9));
-			background: -webkit-linear-gradient(top, #fefefe 1%,#f2f7f9 100%);
-			background: -o-linear-gradient(top, #fefefe 1%,#f2f7f9 100%);
-			background: -ms-linear-gradient(top, #fefefe 1%,#f2f7f9 100%);
-			background: linear-gradient(to bottom, #fefefe 1%,#f2f7f9 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f7f9',GradientType=0 ); */ }
+  border-bottom: solid 1px #e5e5e5; }
 
 main .table-list.table-internal-list tr:hover td {
-  background: #fefefe !important;
-  /* background: #fafafa !important;
-			background: -moz-linear-gradient(top, #fefefe 1%, #E8EEF2 100%);
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#fefefe), color-stop(100%,#E8EEF2));
-			background: -webkit-linear-gradient(top, #fefefe 1%,#E8EEF2 100%);
-			background: -o-linear-gradient(top, #fefefe 1%,#E8EEF2 100%);
-			background: -ms-linear-gradient(top, #fefefe 1%,#E8EEF2 100%);
-			background: linear-gradient(to bottom, #fefefe 1%,#E8EEF2 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#E8EEF2',GradientType=0 ); */ }
+  background: #fefefe !important; }
