--- a/mainapp/templates/mainapp/conf.html
+++ b/mainapp/templates/mainapp/conf.html
@@ -4,7 +4,7 @@
 	<!-- Content -->
 	<main class="pt-4">
 		<div class="container">
-			<h2>Одобрено РСПС</h2>
+			<h2>Конференции</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
 		</div>
 	</main> 
