--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -27,7 +27,7 @@
 								<a class="nav-link" href="{% url 'regionalOffice' %}">Региональные отделения</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{% url 'approved' %}">Одобрено РСПС</a>
+								<a class="nav-link" href="{% url 'conf' %}">Конференции</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'contact' %}">Контакты</a>
