--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -274,6 +274,7 @@ main {
 				background: #f0fbdc;
 			}
 			td.total-column {
+				padding: 1.5rem;
 				box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
 			}
 		}
