--- a/mainapp/templates/mainapp/includes/modal-authorization.html
+++ b/mainapp/templates/mainapp/includes/modal-authorization.html
@@ -17,7 +17,7 @@
 					<div class="modal-body">
 						<div class="form-group">
 							<label for="" class="form-label-sm">Ваш email</label>
-							<input type="email" class="form-control form-control-sm" placeholder="Email">
+							<input type="text" class="form-control form-control-sm" placeholder="Email">
 						</div>
 						<div class="form-group">
 							<label for="" class="form-label-sm">Ваш пароль</label>
