--- a/static/css/style.css
+++ b/static/css/style.css
@@ -203,6 +203,7 @@ main .table-list {
     main .table-list tr.edit-list td {
       background: #f0fbdc; }
     main .table-list tr.edit-list td.total-column {
+      padding: 1.5rem;
       -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
       box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); }
   main .table-list th {
