--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -24,7 +24,7 @@
 								<a class="nav-link" href="{% url 'docs' %}">Документы</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{% url 'regionalOffice' %}">Региональные отделения</a>
+								<a class="nav-link" href="{% url 'regional_office' %}">Региональные отделения</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'conf' %}">Конференции</a>
