--- a/mainapp/templates/mainapp/account_employee.html
+++ b/mainapp/templates/mainapp/account_employee.html
@@ -7,36 +7,75 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Личный кабинет подразделения</li>
+					<li class="breadcrumb-item"><a href="{% url 'account_about' %}">Личный кабинет подразделения</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Члены подразделения</li>
 				</ol>
 			</nav>
 
 			<h4 class="title-page">Личный кабинет</h4>
 
-			<ul class="nav nav-tabs mb-4 mb-xl-5">
+			<ul class="nav nav-tabs mb-4">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Новости</a>
+					<a class="nav-link" href="{% url 'account_about' %}">О подразделении</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">О подразделении</a>
+					<a class="nav-link" href="{% url 'account_news' %}">Новости</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Члены подразделения</a>
+					<a class="nav-link active" href="{% url 'account_employee' %}">Члены подразделения</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" href="#">Конференции</a>
+					<a class="nav-link" href="{% url 'account_conf' %}">Конференции</a>
 				</li>
 			</ul>
+
+			<div class="search p-3 mb-4">
+				<h5>Быстрый поиск</h5>
+				<form>
+					<div class="form-row">
+						<div class="form-group col-sm-4">
+							<label for="" class="mb-1">Наименование организации / ФИО</label>
+							<input type="text" class="form-control form-control-sm">
+						</div>
+						<div class="form-group col-sm-2">
+							<label for="" class="mb-1">Населенный пункт</label>
+							<select class="form-control form-control-sm">
+								<option selected="">Все</option>
+								<option>Калуга</option>
+								<option>Обнинск</option>
+								<option>Боровск</option>
+								<option>Жуков</option>
+								<option>Ермолино</option>
+							</select>
+						</div>
+						<div class="form-group col-sm-2">
+							<label for="" class="mb-1">Статус членства</label>
+							<select class="form-control form-control-sm">
+								<option selected="">Все</option>
+								<option>заявлен</option>
+								<option>одобрен</option>
+								<option>имеет сертификат </option>
+							</select>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-auto">
+							<button type="submit" class="btn btn-outline-primary btn-xs"><i class="fa fa-search"></i> Найти</button>
+							<button type="button" class="btn btn-link btn-xs">Сбросить</button>
+						</div>
+					</div>
+				</form>
+			</div>
 			
-			<button type="button" class="btn btn-danger btn-xl mb-4 mb-xl-5" data-toggle='modal' data-target='#modal-regConference'>Добавить конференцию</button>
+			<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#modal-newEmployee'>Добавить члена РСПС</button>
 			
 			<div class="table-responsive">
 				<table class="table table-list">
 					<thead>
 						<tr class="active">
-							<th>Дата проведения</th>
-							<th>Место проведения</th>
-							<th>Название конференции</th>
+							<th>Название организации / ФИО</th>
+							<th>Контакты</th>
+							<th>Статус членства</th>
 							<th>Действия</th>
 						</tr>
 					</thead>
@@ -53,7 +92,7 @@
 								</td>
 								<td>
 									<a href="#" class="btn-action mr-3 text-primary" title="Удалить конференцию"><i class="fa fa-trash-o"></i></a>
-									<a href="#multiCollapseConf{{conference.pk}}" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" aria-controls="multiCollapseConf01" title="Изменить"><i class="fa fa-pencil"></i></a>
+									<a href="#multiCollapseConf{{conference.pk}}" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" title="Изменить"><i class="fa fa-pencil"></i></a>
 								</td>
 							</tr>
 							<tr class="multi-collapse collapse edit-list" id="multiCollapseConf{{conference.pk}}">
@@ -172,7 +211,7 @@
 									</div>
 
 									<button type="submit" class="btn btn-primary btn-xs">Сохранить</button>
-									<a href="#multiCollapseConf01" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" aria-controls="multiCollapseConf01" role="button">Закрыть</a>
+									<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
 								</form>
 							</td>
 						</tr>
@@ -220,28 +259,28 @@
 											</div>
 										</div>
 										<div class="form-group row align-items-center">
-												<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-												<div class="col-sm-6">
+											<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
+											<div class="col-sm-6">
+												<div class="input-group input-group-sm">
+													<div class="input-group-prepend">
+														<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
+													</div>
+													<input type="text" class="form-control" value="Вопрос повестки дня" disabled>
+												</div>
+											</div>
+										</div>
+										<div id="add_field_area">
+											<div class="form-group row align-items-center" id="add">
+												<div class="col-sm-6 offset-sm-4">
 													<div class="input-group input-group-sm">
 														<div class="input-group-prepend">
-															<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
+															<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
 														</div>
 														<input type="text" class="form-control" value="Вопрос повестки дня" disabled>
 													</div>
 												</div>
 											</div>
-											<div id="add_field_area">
-												<div class="form-group row align-items-center" id="add">
-													<div class="col-sm-6 offset-sm-4">
-														<div class="input-group input-group-sm">
-															<div class="input-group-prepend">
-																<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
-															</div>
-															<input type="text" class="form-control" value="Вопрос повестки дня" disabled>
-														</div>
-													</div>
-												</div>
-											</div>
+										</div>
 									</div>
 
 									<h6 class='text-primary mb-4'>Участники конференции</h6>
@@ -283,7 +322,7 @@
 									</div>
 
 									<!-- <button type="submit" class="btn btn-primary btn-xs">Сохранить</button> -->
-									<a href="#multiCollapseConf01" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" aria-controls="multiCollapseConf02" role="button">Закрыть</a>
+									<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" aria-controls="multiCollapseConf02" role="button">Закрыть</a>
 								</form>
 							</td>
 						</tr>
