--- a/mainapp/templates/mainapp/conf.html
+++ b/mainapp/templates/mainapp/conf.html
@@ -1,12 +1,212 @@
 {% extends 'mainapp/base.html' %}
-
+{% load static %}
 {% block content %}
-	<!-- Content -->
-	<main class="pt-4">
-		<div class="container">
-			<h2>Конференции</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
+<!-- Content -->
+<main class="pt-4">
+	<div class="container">
+		<nav aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Конференции</li>
+			</ol>
+		</nav>
+
+		<h4 class="title-page mb-4">Конференции региональных отделений</h4>
+
+		<div class="search p-3 mb-4">
+			<h5>Быстрый поиск</h5>
+			<form>
+				<div class="form-row">
+                    <div class="form-group col-sm-4">
+                        <label for="" class="mb-1">Региональное отделение</label>
+                        <select class="form-control form-control-sm">
+                            <option selected="">Все</option>
+                            <option>Москва</option>
+                            <option>Московская область</option>
+                            <option>Калужская область</option>
+                            <option>Ленинградская область</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-sm-2">
+                        <label for="" class="mb-1">Год проведения</label>
+                        <select class="form-control form-control-sm">
+                            <option selected="">Все</option>
+                            <option>2016</option>
+                            <option>2017</option>
+                            <option>2018</option>
+                            <option>2019</option>
+                            <option>2020</option>
+                            <option>2021</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-outline-primary btn-xs"><i class="fa fa-search"></i> Найти</button>
+                        <button type="button" class="btn btn-link btn-xs">Сбросить</button>
+                    </div>
+                </div>
+			</form>
 		</div>
-	</main> 
+
+		<div class="card-all">
+			<div class="row">
+				<div class="col-sm-6 col-lg-4 my-3">
+					<div class="card rounded-0">
+						<div class="card-top">
+							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
+							<div class="card-img-overlay">Калужская область</div>
+							<div class="card-img-overlay-right">01.02.2018</div>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
+							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Новые способы сварки</h6>
+							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+						</div>
+						<div class="card-footer">
+							<div class="d-flex justify-content-between align-items-center">
+								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="float-right">
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-lg-4 my-3">
+					<div class="card rounded-0">
+						<div class="card-top">
+							<img class="card-img-top img-fluid" src="{% static 'images/img-mosobl.png' %}" alt="Герб Калужской области">
+							<div class="card-img-overlay">Московская область</div>
+							<div class="card-img-overlay-right">01.02.2018</div>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
+							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Разработка методической литературы</h6>
+							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Балашиха, ул. Колхозная, д. 118A</p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+						</div>
+						<div class="card-footer">
+							<div class="d-flex justify-content-between align-items-center">
+								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="float-right">
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-lg-4 my-3">
+					<div class="card rounded-0">
+						<div class="card-top">
+							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
+							<div class="card-img-overlay">Калужская область</div>
+							<div class="card-img-overlay-right">01.02.2018</div>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
+							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
+							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+						</div>
+						<div class="card-footer">
+							<div class="d-flex justify-content-between align-items-center">
+								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="float-right">
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-lg-4 my-3">
+					<div class="card rounded-0">
+						<div class="card-top">
+							<img class="card-img-top img-fluid" src="{% static 'images/img-mosobl.png' %}" alt="Герб Калужской области">
+							<div class="card-img-overlay">Московская область</div>
+							<div class="card-img-overlay-right">01.02.2018</div>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
+							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Разработка методической литературы</h6>
+							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Балашиха, ул. Колхозная, д. 118A</p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+						</div>
+						<div class="card-footer">
+							<div class="d-flex justify-content-between align-items-center">
+								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="float-right">
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-lg-4 my-3">
+					<div class="card rounded-0">
+						<div class="card-top">
+							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
+							<div class="card-img-overlay">Калужская область</div>
+							<div class="card-img-overlay-right">01.02.2018</div>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
+							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
+							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+						</div>
+						<div class="card-footer">
+							<div class="d-flex justify-content-between align-items-center">
+								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="float-right">
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<nav aria-label="Page navigation example">
+			<ul class="pagination pagination-sm">
+				<li class="page-item disabled">
+					<a class="page-link" href="#" aria-label="Previous">
+						<span aria-hidden="true">&laquo;</span>
+					</a>
+				</li>
+				<li class="page-item active"><a class="page-link" href="#">1</a></li>
+				<li class="page-item"><a class="page-link" href="#">2</a></li>
+				<li class="page-item"><a class="page-link" href="#">3</a></li>
+				<li class="page-item">
+					<a class="page-link" href="#" aria-label="Next">
+						<span aria-hidden="true">&raquo;</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
+</main> 
 <!-- End Content -->
 {% endblock %}
