--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@
   background-color: #086da3 !important;
   color: #fff !important; }
 
-.btn-link, .page-link, .text-primary {
+.btn-link, .page-link, .text-primary, .card-link {
   color: #086da3 !important; }
 
 .breadcrumb {
@@ -158,87 +158,131 @@ footer hr {
   justify-content: space-between; }
 
 /* End Modal */
-main h4.title-page {
-  color: #00467f;
-  margin-bottom: 1.5rem;
-  font-weight: bold; }
-
-main .nav-tabs .nav-link {
-  border-radius: 0;
-  color: #086da3; }
-
-main .btn-xl {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid #b6140e;
-  background: #d23128;
-  background: -o-linear-gradient(top, #cd2923, #d23128);
-  background-image: -ms-linear-gradient(top, #cd2923 0%, #d23128 100%);
-  border-radius: 3px;
-  -webkit-box-shadow: inset #930800 0 -4px 0;
-  box-shadow: inset #930800 0 -4px 0;
-  text-shadow: #290100 0 -1px 0;
-  padding: 20px 50px;
-  font-size: 1rem; }
-  main .btn-xl:hover {
-    background: #d8352d;
-    background: -o-linear-gradient(top, #d32f27, #d8352d);
-    background-image: -ms-linear-gradient(top, #d32f27 0%, #d8352d 100%); }
-
-main .table-list {
-  font-size: 0.75rem;
-  color: #666666; }
-  main .table-list tr {
-    border-left: 1px solid #e5e5e5;
-    border-right: 1px solid #e5e5e5; }
-    main .table-list tr:hover td {
-      background: #f0fbdc;
-      background: -webkit-gradient(linear, left top, left bottom, from(#f0fbdc), to(#e4efd1));
-      background: linear-gradient(to bottom, #f0fbdc 0%, #e4efd1 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0fbdc', endColorstr='#e4efd1',GradientType=0 ); }
-  main .table-list tr.edit-list {
-    border-top: 2px solid #CE2B24;
-    background: #f0fbdc; }
-    main .table-list tr.edit-list td {
-      background: #f0fbdc; }
-    main .table-list tr.edit-list td.total-column {
-      padding: 1.5rem;
-      -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); }
-  main .table-list th {
-    vertical-align: middle;
-    border-bottom: solid 1px #e5e5e5;
+main {
+  /* All Conferences */
+  /* End Conferences */ }
+  main h4.title-page {
     color: #00467f;
-    background: #eaeaea !important;
-    -webkit-box-shadow: inset 0 3px 1px #C2C2C2;
-    box-shadow: inset 0 3px 1px #C2C2C2;
-    text-transform: uppercase;
-    font-weight: bold;
-    padding: 15px 20px; }
-  main .table-list td {
-    vertical-align: middle;
-    border-bottom: solid 1px #e5e5e5;
-    padding: 15px 20px;
-    background: #fefefe;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #fefefe), to(#f2f7f9));
-    background: linear-gradient(to bottom, #fefefe 1%, #f2f7f9 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f7f9',GradientType=0 ); }
-  main .table-list .btn-action {
+    margin-bottom: 1.5rem;
     font-weight: bold; }
-    main .table-list .btn-action:hover {
-      color: #007bff !important; }
-    main .table-list .btn-action i {
-      font-size: 1rem; }
-
-main .table-list.table-internal-list th {
-  font-size: 0.7rem;
-  padding: 10px 15px;
-  border-bottom: solid 1px #e5e5e5; }
-
-main .table-list.table-internal-list td {
-  padding: 10px 15px;
-  border-bottom: solid 1px #e5e5e5; }
-
-main .table-list.table-internal-list tr:hover td {
-  background: #fefefe !important; }
+  main .nav-tabs .nav-link {
+    border-radius: 0;
+    color: #086da3; }
+  main .btn-xl {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #b6140e;
+    background: #d23128;
+    background: -o-linear-gradient(top, #cd2923, #d23128);
+    background-image: -ms-linear-gradient(top, #cd2923 0%, #d23128 100%);
+    border-radius: 3px;
+    -webkit-box-shadow: inset #930800 0 -4px 0;
+    box-shadow: inset #930800 0 -4px 0;
+    text-shadow: #290100 0 -1px 0;
+    padding: 20px 50px;
+    font-size: 1rem; }
+    main .btn-xl:hover {
+      background: #d8352d;
+      background: -o-linear-gradient(top, #d32f27, #d8352d);
+      background-image: -ms-linear-gradient(top, #d32f27 0%, #d8352d 100%); }
+  main .table-list {
+    font-size: 0.75rem;
+    color: #666666; }
+    main .table-list tr {
+      border-left: 1px solid #e5e5e5;
+      border-right: 1px solid #e5e5e5; }
+      main .table-list tr:hover td {
+        background: #f0fbdc;
+        background: -webkit-gradient(linear, left top, left bottom, from(#f0fbdc), to(#e4efd1));
+        background: linear-gradient(to bottom, #f0fbdc 0%, #e4efd1 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0fbdc', endColorstr='#e4efd1',GradientType=0 ); }
+    main .table-list tr.edit-list {
+      border-top: 2px solid #CE2B24;
+      background: #f0fbdc; }
+      main .table-list tr.edit-list td {
+        background: #f0fbdc; }
+      main .table-list tr.edit-list td.total-column {
+        padding: 1.5rem;
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5); }
+    main .table-list th {
+      vertical-align: middle;
+      border-bottom: solid 1px #e5e5e5;
+      color: #00467f;
+      background: #eaeaea !important;
+      -webkit-box-shadow: inset 0 3px 1px #C2C2C2;
+      box-shadow: inset 0 3px 1px #C2C2C2;
+      text-transform: uppercase;
+      font-weight: bold;
+      padding: 15px 20px; }
+    main .table-list td {
+      vertical-align: middle;
+      border-bottom: solid 1px #e5e5e5;
+      padding: 15px 20px;
+      background: #fefefe;
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #fefefe), to(#f2f7f9));
+      background: linear-gradient(to bottom, #fefefe 1%, #f2f7f9 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f7f9',GradientType=0 ); }
+    main .table-list .btn-action {
+      font-weight: bold; }
+      main .table-list .btn-action:hover {
+        color: #007bff !important; }
+      main .table-list .btn-action i {
+        font-size: 1rem; }
+  main .table-list.table-internal-list th {
+    font-size: 0.7rem;
+    padding: 10px 15px;
+    border-bottom: solid 1px #e5e5e5; }
+  main .table-list.table-internal-list td {
+    padding: 10px 15px;
+    border-bottom: solid 1px #e5e5e5; }
+  main .table-list.table-internal-list tr:hover td {
+    background: #fefefe !important; }
+  main .card-all .row > div[class*='col-'] {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  main .card-all .card:hover {
+    border: 1px solid #c42921;
+    -webkit-transition: 0.5s;
+    transition: 0.5s; }
+  main .card-all .card-top {
+    height: 200px; }
+    main .card-all .card-top img {
+      height: 100%;
+      width: auto;
+      margin-left: auto;
+      margin-right: auto;
+      display: block; }
+    main .card-all .card-top .card-img-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: auto;
+      bottom: auto;
+      padding: 0.25rem 1rem;
+      font-size: 0.875rem;
+      background-color: rgba(238, 238, 238, 0.7);
+      font-weight: bold;
+      color: #086da3; }
+    main .card-all .card-top .card-img-overlay-right {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: auto;
+      bottom: auto;
+      padding: 0.25rem 1rem;
+      font-size: 0.875rem;
+      background-color: rgba(238, 238, 238, 0.7); }
+  main .card-all .card-body {
+    position: relative; }
+    main .card-all .card-body .card-title {
+      font-size: 0.875rem;
+      font-weight: bold; }
+    main .card-all .card-body .card-subtitle {
+      font-size: 0.875rem; }
+    main .card-all .card-body .card-text {
+      font-size: 0.8rem; }
+  main .search {
+    background: #E8EEF2; }
