закончил верстку ЛК-члены подразделения

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -37,6 +37,7 @@
 	{% include 'mainapp/includes/modal-participantConf.html' %}
 	{% include 'mainapp/includes/modal-regConference.html' %}
 	{% include 'mainapp/includes/modal-newEmployee.html' %}
+	{% include 'mainapp/includes/modal-regCongress.html' %}
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
