--- a/mainapp/templates/mainapp/conf.html
+++ b/mainapp/templates/mainapp/conf.html
@@ -62,17 +62,15 @@
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Новые способы сварки</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
-							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
 								<div class="float-right">
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
 								</div>
 							</div>
 						</div>
@@ -89,17 +87,15 @@
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Разработка методической литературы</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Балашиха, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
-							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
 								<div class="float-right">
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
 								</div>
 							</div>
 						</div>
@@ -116,17 +112,15 @@
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
-							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
 								<div class="float-right">
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
 								</div>
 							</div>
 						</div>
@@ -143,17 +137,15 @@
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Разработка методической литературы</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Балашиха, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
-							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
 								<div class="float-right">
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
 								</div>
 							</div>
 						</div>
@@ -170,17 +162,15 @@
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
-							<p class="card-text mb-0"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></p>
+							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><small>Поделиться:</small></div>
+								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
 								<div class="float-right">
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Отправка ссылки на Email"><i class="fa fa-envelope"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
-									<a href="#" class="btn btn-outline-danger btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
+									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Facebook"><i class="fa fa-facebook-official"></i></a>
 								</div>
 							</div>
 						</div>
