--- a/mainapp/templates/mainapp/includes/modal-newEmployee.html
+++ b/mainapp/templates/mainapp/includes/modal-newEmployee.html
@@ -12,30 +12,45 @@
 			</div>
 			<form>
 				<div class="modal-body">
-					<div class="form-row">
+					<!-- <div class="form-row">
 						<div class="form-group col-sm-4">
 							<label for="" class="col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
 							<input type="date" class="form-control form-control-sm" placeholder="" value="">
 						</div>
-					</div>
+					</div> -->
 					<div class="form-group">
-						<label for="" class="form-label-sm">Место проведения&nbsp;<span class="text-danger">*</span></label>
+						<label for="" class="form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
 						<input type="text" class="form-control form-control-sm" required>
 					</div>
 					<div class="form-group">
-						<label for="" class="form-label-sm">Название конференции&nbsp;<span class="text-danger">*</span></label>
+						<label for="" class="form-label-sm">Город проживания (населенный пункт)&nbsp;<span class="text-danger">*</span></label>
+						<input type="text" class="form-control form-control-sm" required>
+					</div>
+					<div class="form-row">
+						<div class="form-group col">
+							<label for="" class="form-label-sm">Email&nbsp;<span class="text-danger">*</span></label>
+							<input type="text" class="form-control form-control-sm" required>
+						</div>
+						<div class="form-group col">
+							<label for="" class="form-label-sm">Телефон</label>
+							<input type="text" class="form-control form-control-sm">
+						</div>
+					</div>	
+					<div class="form-group">
+						<label for="" class="form-label-sm">Место работы</label>
+						<input type="text" class="form-control form-control-sm">
+					</div>
+					<div class="form-group">
+						<label for="" class="form-label-sm">Должность</label>
 						<input type="text" class="form-control form-control-sm" required>
 					</div>
 					<div class="form-group">
-						<label for="" class="form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
-						<input type="text" class="form-control form-control-sm" required>
-					</div>
-					<div class="form-group">
-						<label for="" class="form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-						<textarea class="form-control form-control-sm" rows="3"></textarea>
-					</div>
-					<div class="alert alert-danger" role="alert">
-					  <strong>Внимание!!!</strong>&nbsp;В профиле конференции не забудьте зарегистрировать участников.
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" id="gridCheck">
+							<label class="form-check-label" for="gridCheck">
+								подписка на рассылку от РСПС
+							</label>
+						</div>
 					</div>
 				</div>
 				<div class="modal-footer">
