--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -48,6 +48,7 @@ body {
 	font-size: 0.9rem;
 }
 
+
 /* Header */
 .header-menu {
 	background-color: #086da3;
@@ -239,13 +240,14 @@ main {
 		font-size: 1rem;
 
 		&:hover {
-			background: #d8352d;
+			background-color: #dc3545 !important;
+			/* background: #d8352d;
 			background: -webkit-gradient(linear, left top, left bottom, from(#d32f27), to(#d8352d));
 			background: -webkit-linear-gradient(top, #d32f27, #d8352d);
 			background: -moz-linear-gradient(top, #d32f27, #d8352d);
 			background: -ms-linear-gradient(top, #d32f27, #d8352d);
 			background: -o-linear-gradient(top, #d32f27, #d8352d);
-			background-image: -ms-linear-gradient(top, #d32f27 0%, #d8352d 100%);
+			background-image: -ms-linear-gradient(top, #d32f27 0%, #d8352d 100%); */
 		}
 	}
 
@@ -313,6 +315,25 @@ main {
 				font-size: 1rem;
 			}
 		}
+
+		.status-false {
+		    text-transform: uppercase;
+		    opacity: 0.7;
+		}
+		.status-true {
+		    text-transform: uppercase;
+		    font-weight: bold;
+		}
+		.progress {
+			.w-40 {width: 40%;}
+			.w-35 {width: 35%;}
+			.w-25 {width: 25%;}
+
+			.bg-default {
+				background-color: #e9ecef;
+			}
+		}
+
 	}
 
 	.table-list.table-internal-list {
@@ -382,14 +403,21 @@ main {
 			position: relative;
 
 			.card-title {
-				font-size: 0.875rem;
+				font-size: 0.9rem;
 				font-weight: bold;
 			}
 			.card-subtitle {
-				font-size: 0.875rem;
+				font-size: 0.9rem;
 			}
 			.card-text {
 				font-size: 0.8rem;
+			}
+		}
+
+		.card-footer {
+			.card-link {
+				font-size: 0.8rem;
+				&:hover {text-decoration: underline;}
 			}
 		}
 	}
