--- a/mainapp/templates/mainapp/account_conf.html
+++ b/mainapp/templates/mainapp/account_conf.html
@@ -120,7 +120,7 @@
 									<div class="form-group row">
 										<label for="" class="sr-only">Добавить вопрос</label>
 										<div class="col-sm-6 offset-sm-4">
-											<button class="btn btn-outline-secondary btn-xs" onclick="addField();"><i class="fa fa-plus mr-2"></i>Добавить вопрос</button>
+											<button class="btn btn-outline-secondary btn-xs"><i class="fa fa-plus mr-2"></i>Добавить вопрос</button>
 										</div>
 									</div>
 								</div>
@@ -166,11 +166,14 @@
 									</table>
 								</div>
 
-								<div class="form-group form-check">
-									<input type="checkbox" class="form-check-input">
-									<label class="form-check-label text-success" for=""><strong>Конференция проведена</strong></label>
+								<div class="form-group">
+									<div class="form-check">
+										<input class="form-check-input" type="checkbox" id="gridCheck">
+										<label class="form-check-label text-success" for="gridCheck">
+											<strong>Конференция проведена</strong>
+										</label>
+									</div>
 								</div>
-
 								<button type="submit" class="btn btn-primary btn-xs">Сохранить</button>
 								<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
 							</form>
@@ -277,12 +280,15 @@
 									</table>
 								</div>
 
-								<div class="form-group form-check">
-									<input type="checkbox" class="form-check-input" checked disabled>
-									<label class="form-check-label text-success" for=""><strong>Конференция проведена</strong></label>
+								<div class="form-group">
+									<div class="form-check">
+										<input class="form-check-input" type="checkbox" id="gridCheck" checked disabled>
+										<label class="form-check-label" for="gridCheck">
+											Конференция проведена
+										</label>
+									</div>
 								</div>
 
-								<!-- <button type="submit" class="btn btn-primary btn-xs">Сохранить</button> -->
 								<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" aria-controls="multiCollapseConf02" role="button">Закрыть</a>
 							</form>
 						</td>
