--- a/mainapp/templates/mainapp/includes/modal-regCongress.html
+++ b/mainapp/templates/mainapp/includes/modal-regCongress.html
@@ -20,7 +20,7 @@
 							<tr>
 								<th scope="row" colspan="3">
 									<div class="form-check">
-						<input type="checkbox" class="form-check-input" id="selectAll">
+						<input type="checkbox" class="form-check-input select-all" id="selectAll">
 						<label class="form-check-label" for="selectAll">выбрать всех</label>
 					</div>
 								</th>
@@ -28,7 +28,7 @@
 							<tr>
 								<th scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static" type="checkbox" id="blankCheckbox1" value="option1" aria-label="...">
+										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
 									</div>
 								</th>
 								<td>Комбаров Валентин Анатольевич</td>
@@ -37,7 +37,7 @@
 							<tr>
 								<th scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static" type="checkbox" id="blankCheckbox2" value="option1" aria-label="...">
+										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
 									</div>
 								</th>
 								<td>Комбаров Валентин Анатольевич</td>
@@ -46,7 +46,7 @@
 							<tr>
 								<th scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static" type="checkbox" id="blankCheckbox3" value="option1" aria-label="...">
+										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
 									</div>
 								</th>
 								<td>Комбаров Валентин Анатольевич</td>
@@ -55,7 +55,7 @@
 							<tr>
 								<th scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static" type="checkbox" id="blankCheckbox1" value="option1" aria-label="...">
+										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
 									</div>
 								</th>
 								<td>Комбаров Валентин Анатольевич</td>
@@ -64,7 +64,7 @@
 							<tr>
 								<th scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static" type="checkbox" id="blankCheckbox2" value="option1" aria-label="...">
+										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
 									</div>
 								</th>
 								<td>Комбаров Валентин Анатольевич</td>
@@ -73,7 +73,7 @@
 							<tr>
 								<th scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static" type="checkbox" id="blankCheckbox3" value="option1" aria-label="...">
+										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
 									</div>
 								</th>
 								<td>Комбаров Валентин Анатольевич</td>
